# pmi_bot

./: Dockerfile  enums.py  main.py  pyproject.toml  requirements.txt  server.py
app/: config.py  main.py  utils.py
app/command_processing/: handler.py
app/schemas/: action.py  attachments.py  geography.py  longpoll.py  message_new.py
app/schemas/attachments/: __init__.py  document.py  link.py  photo.py  product.py  video.py
app/schemas/auxilary_objects/: button.py  product.py
app/vk_api/: longpoll.py  message.py
vk_api/: longpoll.py  message.py
